# rtcl

./: .gitignore  Agent.md  Cargo.toml  Claude.md  LICENSE  README.md  test_compat.tcl
.claude/: settings.local.json
crates/rtcl-cli/: Cargo.toml
crates/rtcl-cli/src/: main.rs
crates/rtcl-core/: Cargo.toml
crates/rtcl-core/src/: channel.rs  command.rs  error.rs  interp.rs  lib.rs  parser.rs  stdlib.tcl  tcl.pest  value.rs  vm.rs
crates/rtcl-core/src/interp/: call.rs  eval.rs  mod.rs  registry.rs  util.rs  vars.rs  vm_bridge.rs
crates/rtcl-core/src/interp/commands/: array.rs  chan_io.rs  clock.rs  control.rs  dict.rs  event.rs  exec_cmd.rs  interp_cmd.rs  introspect.rs  io.rs  json.rs  list.rs  list_sort.rs  loops.rs  misc.rs  misc_tests.rs  mod.rs  namespace.rs  os.rs  package.rs  proc.rs  regexp_cmds.rs  string_cmds.rs
crates/rtcl-core/src/types/: expr.rs  expr_funcs.rs  expr_tests.rs  index.rs  mod.rs
crates/rtcl-expect/: Cargo.toml
crates/rtcl-expect/src/: lib.rs
crates/rtcl-ir/: Cargo.toml
crates/rtcl-ir/src/: bytecode.rs  lib.rs  opcode.rs
crates/rtcl-parser/: Cargo.toml
crates/rtcl-parser/examples/: token_test.rs
crates/rtcl-parser/src/: bytecode.rs  compiler.rs  completeness.rs  expr_compile.rs  lib.rs  opcode.rs  tcl.pest  validate.rs
crates/rtcl-parser/src/rd/: cursor.rs  escape.rs  mod.rs  token.rs  token_test.rs  tokens.rs  word.rs
crates/rtcl-parser/src/tests/: basic.rs  braces.rs  cmd_sub.rs  cursor.rs  edge_cases.rs  escape.rs  jimtcl.rs  mod.rs  tokens.rs  variables.rs
crates/rtcl-vm/: Cargo.toml
crates/rtcl-vm/src/: bytecode.rs  compiler.rs  context.rs  error.rs  execute.rs  lib.rs  opcode.rs  value.rs
tests/: expand_test.tcl  expr.test  for.test  list.test  rtcl_test.tcl  scope_test.tcl  test_opt.tcl  while.test
