[package]
name = "rtcl-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for rtcl - lightweight Tcl interpreter"
keywords = ["tcl", "scripting", "interpreter", "embedded"]
categories = ["parser-implementations", "embedded", "command-line-interface"]

[dependencies]
hashbrown.workspace = true
smallvec.workspace = true
rtcl-parser.workspace = true
rtcl-vm.workspace = true

[dependencies.spin]
workspace = true
optional = true

[features]
default = ["std"]
std = []
alloc = ["smallvec/const_new", "hashbrown/default"]
# For embedded/no-std targets
embedded = ["alloc", "dep:spin"]
# Enable extra diagnostics
debug = []

[dev-dependencies]
