[package]
name = "rtcl-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for rtcl - lightweight Tcl interpreter"
keywords = ["tcl", "scripting", "interpreter", "embedded"]
categories = ["parser-implementations", "embedded", "command-line-interface"]

[dependencies]
rtcl-parser.workspace = true
rtcl-vm.workspace = true

[dependencies.regex]
workspace = true
optional = true

[dependencies.spin]
workspace = true
optional = true

[features]
default = ["rtcl_std"]
# Rust standard library (disable for no_std targets)
std = []
# Tcl standard library — all extensions combined
rtcl_std = ["file", "io", "exec", "clock", "regexp", "env", "signal", "package"]
# Individual Tcl extensions (each implies Rust std)
file = ["std"]                    # file, cd, pwd, glob, readdir, source
io = ["std"]                      # channel I/O: open, close, read, gets, seek, tell, eof, flush, fconfigure, pid
exec = ["std"]                    # exec, wait
clock = ["std"]                   # clock seconds/clicks/format/scan
regexp = ["std", "dep:regex"]     # regexp, regsub
env = ["std"]                     # $env array from OS environment
package = ["file"]                # package provide/require/names/forget
signal = ["std"]                  # kill, sleep
# For embedded/no-std targets
alloc = []
embedded = ["alloc", "dep:spin"]
# Enable extra diagnostics
debug = []

[dev-dependencies]
