[package]
name = "rtcl-ir"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Intermediate representation types for rtcl — OpCode, CmdId, ByteCode"
keywords = ["tcl", "bytecode", "ir", "opcode"]
categories = ["parser-implementations"]

[dependencies]
