[package]
name = "rtcl-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tcl parser for rtcl - pest-based grammar producing AST"
keywords = ["tcl", "parser", "pest", "scripting"]
categories = ["parser-implementations"]

[dependencies]
pest.workspace = true
pest_derive.workspace = true

[build-dependencies]
pest_derive.workspace = true
