[package]
name = "rtcl-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tcl parser for rtcl — hand-written recursive descent"
keywords = ["tcl", "parser", "scripting"]
categories = ["parser-implementations"]

[dependencies]
rtcl-ir.workspace = true
