[package]
name = "rtcl-vm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Bytecode execution engine and shared types for rtcl"
keywords = ["tcl", "vm", "bytecode", "interpreter"]
categories = ["parser-implementations"]

[dependencies]
rtcl-ir.workspace = true
smallvec.workspace = true
